Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -45,7 +45,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import "
+    "import pandas as pd\n",
+    "\n",
+    "df = "
    ]
   },
   {
