Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -47,7 +47,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv('lego_se')"
+    "df = pd.read_csv('lego_sets.csv')"
    ]
   },
   {
