--- a/index.ipynb
+++ b/index.ipynb
@@ -47,7 +47,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv('lego_sets.csv')"
+    "df = pd.read_csv('lego_sets.csv')\n"
    ]
   },
   {
@@ -56,7 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = None"
+    "df = No"
    ]
   },
   {
