Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -56,7 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = No"
+    "df = df = pd.read_csv('lego_sets.csv')"
    ]
   },
   {
