--- a/index.ipynb
+++ b/index.ipynb
@@ -45,9 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "\n",
-    "df = pd.read_csv('lego_sets.csv')\n"
+    "import pandas as pd"
    ]
   },
   {
