Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -284,11 +284,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ages                    0\n",
+       "list_price              0\n",
+       "num_reviews          1620\n",
+       "piece_count             0\n",
+       "play_star_rating     1775\n",
+       "prod_desc             377\n",
+       "prod_id                 0\n",
+       "prod_long_desc          0\n",
+       "review_difficulty    2055\n",
+       "set_name                0\n",
+       "star_rating          1620\n",
+       "theme_name              3\n",
+       "val_star_rating      1795\n",
+       "country                 0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df."
+    "df.isna().sum()"
    ]
   },
   {
