Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -335,7 +335,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Answer question here...12,261; 7; 7;"
+    "## Answer question here...12,261; 7; 7; val_star_rating"
    ]
   },
   {
