Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -536,7 +536,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df['star_rating'].mean"
+   ]
   },
   {
    "cell_type": "markdown",
