Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -533,11 +533,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.7"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df['star_rating'].mean"
+    "df['star_rating'].median()"
    ]
   },
   {
