Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -563,7 +563,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df['play_star_ratin']"
+   ]
   },
   {
    "cell_type": "markdown",
