Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -564,7 +564,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['play_star_ratin']"
+    "df['play_star_rating'].value"
    ]
   },
   {
