Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -620,7 +620,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df['list_pri']"
+   ]
   },
   {
    "cell_type": "markdown",
