--- a/index.ipynb
+++ b/index.ipynb
@@ -617,11 +617,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "91.9804293059243"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df['list_pri']"
+    "df['list_price'].std()"
    ]
   },
   {
