--- a/index.ipynb
+++ b/index.ipynb
@@ -647,7 +647,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df['piece_count'].sum"
+   ]
   },
   {
    "cell_type": "markdown",
