--- a/index.ipynb
+++ b/index.ipynb
@@ -644,11 +644,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6049650.0"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df['piece_count'].sum"
+    "df['piece_count'].sum()"
    ]
   },
   {
