Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -674,7 +674,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df['piece_count']."
+   ]
   },
   {
    "cell_type": "markdown",
