--- a/index.ipynb
+++ b/index.ipynb
@@ -671,11 +671,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1077.0"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df['piece_count']."
+    "df['piece_count'].quantile(.9)"
    ]
   },
   {
