Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -733,7 +733,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df['review_']"
+   ]
   },
   {
    "cell_type": "markdown",
