--- a/index.ipynb
+++ b/index.ipynb
@@ -778,7 +778,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "string_df = dfNone"
+    "string_df = df.applymap(lambdNone"
    ]
   },
   {
