--- a/index.ipynb
+++ b/index.ipynb
@@ -778,7 +778,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "string_df = df.applymap(lambdNone"
+    "string_df = df.applymap(lambda x: str(x))None"
    ]
   },
   {
