Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -778,7 +778,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "string_df = df.applymap(lambda x: str(x))None"
+    "string_df = df.applymap(lambda x: str(x))\n",
+    "string"
    ]
   },
   {
