Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -779,7 +779,7 @@
    "outputs": [],
    "source": [
     "string_df = df.applymap(lambda x: str(x))\n",
-    "string"
+    "string_df.d"
    ]
   },
   {
